<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="360dp"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/door_detail_idDoor"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:enabled="false"
            android:hint="@string/id_door" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/door_detail_idAccountCreate"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:enabled="false"
            android:hint="@string/id_account_create" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/door_detail_position"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:enabled="false"
            android:hint="@string/position" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:enabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/door_detail_createdAt"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/created_at" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:enabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/door_detail_lastUpdate"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:enabled="false"
            android:hint="@string/last_updated" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layoutDirection="rtl"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/door_detail_btn_cancel"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:maxLines="1"
            android:padding="0dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="10sp">

        </com.google.android.material.button.MaterialButton>

    </LinearLayout>

</LinearLayout>