<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:theme="@style/Theme.AppTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/black"
            android:elevation="4dp">

            <TextView
                android:id="@+id/main_text_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/qr_app"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <android.widget.ViewFlipper
        android:id="@+id/viewFlipper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/main_tab_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBar">


        <!--QR Tab-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/qr_door_spinner"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:layout_marginTop="80dp"
                android:background="@drawable/spinner_with_arrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/qr_code_image"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/qr_image"
                android:src="@drawable/qr_code"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/qr_door_spinner" />

            <Button
                android:id="@+id/qr_btn_update"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="88dp"
                android:background="@color/black"
                android:text="@string/update_qr"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/qr_code_image" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--Profile Tab-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="8dp"
                        android:text="@string/name_label"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/profile_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="8dp"
                        android:paddingStart="8dp"
                        android:paddingEnd="0dp"
                        android:text="@string/loading"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="16dp"
                        android:text="@string/email_label"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/profile_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="16dp"
                        android:paddingStart="8dp"
                        android:paddingEnd="0dp"
                        android:text="@string/loading"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="16dp"
                        android:text="@string/phone_number_label"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/profile_phone_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="16dp"
                        android:paddingStart="8dp"
                        android:paddingEnd="0dp"
                        android:text="@string/loading"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="16dp"
                        android:text="@string/mssv_label"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/profile_ref_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="16dp"
                        android:paddingStart="8dp"
                        android:paddingEnd="0dp"
                        android:text="@string/loading"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_change_password"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="32dp"
                    android:backgroundTint="@color/black"
                    android:text="@string/change_password"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--Ticket Tab-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:id="@+id/ticket_door_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_door"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/ticket_door_spinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/spinner_with_arrow"
                app:layout_constraintTop_toBottomOf="@id/ticket_door_label" />

            <LinearLayout
                android:id="@+id/ticket_start_date_layout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/ticket_door_spinner">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ticket_start_date_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:enabled="false"
                        android:hint="@string/start_time"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/ticket_btn_start_date"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/date_choose"
                    android:padding="12dp"
                    android:src="@drawable/calendar" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ticket_end_date_layout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/ticket_start_date_layout">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ticket_end_date_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:enabled="false"
                        android:hint="@string/end_time"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/ticket_btn_end_date"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/date_choose"
                    android:padding="12dp"
                    android:src="@drawable/calendar" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ticket_reason_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/ticket_end_date_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ticket_reason_input"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:gravity="top"
                    android:hint="@string/reason"
                    android:inputType="textMultiLine" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/ticket_btn_send_ticket"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/black"
                android:text="@string/send_ticket"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/ticket_reason_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </android.widget.ViewFlipper>


    <LinearLayout
        android:id="@+id/main_tab_layout"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:translationY="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/main_btn_qr_code"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:drawableTop="@drawable/qr_code"
            android:drawablePadding="4dp"
            android:drawableTint="@drawable/button_highlight_selector"
            android:padding="8dp"
            android:text="@string/qr_code"
            android:textColor="@drawable/button_highlight_selector"
            android:textSize="12sp"
            tools:ignore=",SmallSp" />

        <Button
            android:id="@+id/main_btn_profile"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:drawableTop="@drawable/profile"
            android:drawablePadding="4dp"
            android:drawableTint="@drawable/button_highlight_selector"
            android:padding="8dp"
            android:text="@string/profile"
            android:textColor="@drawable/button_highlight_selector"
            android:textSize="12sp"
            tools:ignore="" />

        <Button
            android:id="@+id/main_btn_tickets"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:drawableTop="@drawable/tickets"
            android:drawablePadding="4dp"
            android:drawableTint="@drawable/button_highlight_selector"
            android:padding="8dp"
            android:text="@string/tickets"
            android:textColor="@drawable/button_highlight_selector"
            android:textSize="12sp"
            tools:ignore="" />

        <Button
            android:id="@+id/main_btn_logout"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:drawableTop="@drawable/logout"
            android:drawablePadding="4dp"
            android:drawableTint="@drawable/button_highlight_selector"
            android:padding="8dp"
            android:text="@string/logout"
            android:textColor="@drawable/button_highlight_selector"
            android:textSize="12sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
